Fixed header on smaller dimensions.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,3 @@
-@media screen and (max-width: 640px) {
-    .navbar {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media screen and (min-width: 720px) and (max-width: 1024px) {
-    .section-body {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 720px;
-    }
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1600px) {
-    .section-body {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 1024px;
-    }
-}
-
-@media screen and (min-width: 1600px) {
-    .section-body {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 1280px;
-    }
-}
-
 body {
     background-color: #0f0f0f;
     color: #ffffff;
@@ -86,8 +56,7 @@ label {
 
 .home-img {
     position: relative;
-    top:3.5em;
-    padding-bottom: 2em;
+    margin-top:3.5em;
 }
 
 .foot-links {
@@ -173,8 +142,8 @@ label {
 }
 
 /*
-    Text color for navbar unhovered: #f0f0f0
-    Text color for navbar hovered: #ffffff
+Text color for navbar unhovered: #f0f0f0
+Text color for navbar hovered: #ffffff
 */
 
 .nav-home {
@@ -241,4 +210,59 @@ label {
 .resume-link:hover {
     background-color: #ffffff;
     color: #000000;
+}
+
+@media screen and (max-width: 350px) {
+    .navbar {
+        grid-template-columns: 1fr;
+        padding-top: 5vw;
+        padding-bottom: 5vw;
+    }
+    .nav-home {
+        text-align: center;
+    }
+    .nav-selection {
+        display: none;
+    }
+}
+
+@media screen  and (min-width: 350px) and (max-width: 640px) {
+    .navbar {
+        grid-template-columns: 1fr;
+        padding-top: 3.5vw;
+        padding-bottom: 3.5vw;
+    }
+    .nav-home {
+        text-align: center;
+    }
+    .nav-selection {
+        justify-content: center;
+    }
+    .home-img {
+        margin-top: 5em;
+    }
+}
+
+@media screen and (min-width: 720px) and (max-width: 1024px) {
+    .section-body {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1600px) {
+    .section-body {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1024px;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .section-body {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1280px;
+    }
 }
